--- a/index.html
+++ b/index.html
@@ -2,154 +2,56 @@
 <html lang="lv">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Super Breakout LIVE</title>
-
+  <title>Super Breakout – BTC 15m</title>
   <style>
-    :root {
-      --bg: #0b0f14;
-      --panel: #121826;
-      --accent: #3b82f6;
-      --text: #e5e7eb;
-      --muted: #9ca3af;
-      --success: #22c55e;
-      --warning: #f59e0b;
-    }
-
-    * {
-      box-sizing: border-box;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto;
-    }
-
     body {
       margin: 0;
-      background: radial-gradient(1200px 600px at top, #111827, var(--bg));
-      color: var(--text);
-      min-height: 100vh;
+      font-family: Arial, sans-serif;
+      background: #0b0e11;
+      color: #fff;
+    }
+
+    #app {
       display: flex;
-      justify-content: center;
-      align-items: center;
-      padding: 16px;
+      flex-direction: column;
+      height: 100vh;
     }
 
-    .app {
-      width: 100%;
-      max-width: 420px;
-      background: var(--panel);
-      border-radius: 16px;
-      padding: 20px;
-      box-shadow: 0 20px 60px rgba(0,0,0,0.6);
+    @media (min-width: 768px) {
+      #app {
+        flex-direction: row;
+      }
     }
 
-    header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin-bottom: 16px;
+    #chart {
+      flex: 3;
     }
 
-    header h1 {
-      font-size: 20px;
-      margin: 0;
-      letter-spacing: 0.5px;
+    #metrics {
+      flex: 1;
+      padding: 12px;
+      border-left: 1px solid #222;
     }
 
-    .badge {
-      font-size: 12px;
-      padding: 4px 8px;
-      border-radius: 999px;
-      background: rgba(59,130,246,0.15);
-      color: var(--accent);
-    }
-
-    .card {
-      background: #0f172a;
-      border-radius: 12px;
-      padding: 14px;
-      margin-bottom: 12px;
-      border: 1px solid rgba(255,255,255,0.04);
-    }
-
-    .card h2 {
-      font-size: 14px;
-      margin: 0 0 8px 0;
-      color: var(--muted);
-      text-transform: uppercase;
-      letter-spacing: 0.08em;
-    }
-
-    .value {
-      font-size: 28px;
-      font-weight: 600;
-      color: var(--success);
-    }
-
-    .sub {
-      font-size: 13px;
-      color: var(--muted);
-    }
-
-    .grid {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 10px;
-    }
-
-    footer {
-      margin-top: 14px;
-      font-size: 11px;
-      color: var(--muted);
-      text-align: center;
-      line-height: 1.4;
+    @media (max-width: 767px) {
+      #metrics {
+        border-left: none;
+        border-top: 1px solid #222;
+      }
     }
   </style>
 </head>
-
 <body>
-  <div class="app">
-
-    <header>
-      <h1>Super Breakout LIVE</h1>
-      <span class="badge">EDU</span>
-    </header>
-
-    <div class="card">
-      <h2>Market State</h2>
-      <div class="value">COMPRESSION</div>
-      <div class="sub">Waiting for volatility release</div>
+  <div id="app">
+    <div id="chart"></div>
+    <div id="metrics">
+      <h3>Metodikas</h3>
+      <div id="status">Savienojums: …</div>
+      <div id="lastUpdate">Pēdējais atjauninājums: –</div>
     </div>
-
-    <div class="grid">
-      <div class="card">
-        <h2>Vacuum</h2>
-        <div class="value">72%</div>
-        <div class="sub">Liquidity imbalance</div>
-      </div>
-
-      <div class="card">
-        <h2>Tension</h2>
-        <div class="value">68%</div>
-        <div class="sub">Market pressure</div>
-      </div>
-
-      <div class="card">
-        <h2>Momentum</h2>
-        <div class="value">Neutral</div>
-        <div class="sub">No impulse yet</div>
-      </div>
-
-      <div class="card">
-        <h2>Dominance</h2>
-        <div class="value">Low</div>
-        <div class="sub">Fragmented flow</div>
-      </div>
-    </div>
-
-    <footer>
-      Educational market analysis application.<br/>
-      No trading. No execution. Informational use only.
-    </footer>
-
   </div>
+
+  <script src="https://unpkg.com/lightweight-charts/dist/lightweight-charts.standalone.production.js"></script>
+  <script src="./main.js"></script>
 </body>
 </html>
