--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       height: 100vh;
     }
 
+    /* ===== CHART ===== */
     #chart-wrapper {
       position: relative;
       flex: 1;
@@ -31,7 +32,6 @@
     }
 
     /* ===== OVERLAY LAYERS ===== */
-
     #vacuum-layer,
     #compress-layer {
       position: absolute;
@@ -42,13 +42,11 @@
     #vacuum-layer { z-index: 5; }
     #compress-layer { z-index: 6; }
 
-    /* ===== VACUUM ZONE ===== */
-
     .vacuum-zone {
       position: absolute;
       left: 5%;
       width: 90%;
-      height: 140px;
+      height: 20%;
       top: 30%;
       background: rgba(0, 255, 150, 0.12);
       border: 2px solid rgba(0, 255, 150, 0.6);
@@ -59,10 +57,151 @@
       font-weight: bold;
       letter-spacing: 4px;
       color: rgba(0, 255, 150, 0.35);
-    }<script>
-  const vacuumZone = document.querySelector(".vacuum-zone");
-  const compressZone = document.querySelector(".compress-zone");
+    }
 
+    .compress-zone {
+      position: absolute;
+      left: 15%;
+      width: 70%;
+      height: 48px;
+      top: 55%;
+      background: rgba(255, 180, 0, 0.18);
+      border: 2px solid rgba(255, 180, 0, 0.7);
+      border-radius: 14px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 16px;
+      font-weight: bold;
+      letter-spacing: 2px;
+      color: rgba(255, 200, 80, 0.6);
+    }
+
+    /* ===== METRICS / CONTROLS ===== */
+    #metrics {
+      padding: 12px;
+      border-top: 1px solid #1e2329;
+      background: #0b0e11;
+      font-size: 14px;
+    }
+
+    #metrics input[type=range] {
+      width: 100%;
+      margin-bottom: 10px;
+    }
+
+    @media (min-width: 768px) {
+      #app {
+        flex-direction: row;
+      }
+      #chart-wrapper {
+        flex: 3;
+      }
+      #metrics {
+        flex: 1;
+        border-top: none;
+        border-left: 1px solid #1e2329;
+      }
+    }
+  </style>
+</head>
+
+<body>
+<div id="app">
+
+  <!-- ===== CHART AREA ===== -->
+  <div id="chart-wrapper">
+    <div id="chart"></div>
+    <div id="vacuum-layer"></div>
+    <div id="compress-layer"></div>
+  </div>
+
+  <!-- ===== METRICS & CONTROLS ===== -->
+  <div id="metrics">
+    <strong>Metodikas</strong><br><br>
+    Savienojums: <b>LIVE</b><br>
+    Instruments: <b>BTCUSDT</b><br>
+    Timeframe: <b>15m</b><br><br>
+
+    <strong>Kontrole</strong><br><br>
+
+    <label>
+      <input type="checkbox" id="toggle-vacuum" checked>
+      Vacuum
+    </label><br>
+
+    <label>
+      <input type="checkbox" id="toggle-compress" checked>
+      Compress
+    </label><br>
+
+    <label style="opacity:0.4;">
+      <input type="checkbox" disabled>
+      Aggression (drīzumā)
+    </label>
+
+    <hr style="border-color:#1e2329;margin:12px 0;">
+
+    <strong>Kalibrācija</strong><br><br>
+
+    <label>Vacuum pozīcija</label>
+    <input type="range" id="vacuumTop" min="0" max="80" value="30">
+
+    <label>Vacuum augstums</label>
+    <input type="range" id="vacuumHeight" min="5" max="40" value="20">
+
+    <label>Compress pozīcija</label>
+    <input type="range" id="compressTop" min="0" max="80" value="55">
+
+    <label>Compress biezums</label>
+    <input type="range" id="compressHeight" min="20" max="80" value="48">
+  </div>
+
+</div>
+
+<!-- ===== TradingView ===== -->
+<script src="https://s3.tradingview.com/tv.js"></script>
+<script>
+  new TradingView.widget({
+    container_id: "chart",
+    autosize: true,
+    symbol: "BINANCE:BTCUSDT",
+    interval: "15",
+    timezone: "Etc/UTC",
+    theme: "dark",
+    style: "1",
+    locale: "en",
+    hide_top_toolbar: false,
+    hide_legend: true,
+    allow_symbol_change: false,
+    save_image: false
+  });
+</script>
+
+<!-- ===== OVERLAY LOGIC ===== -->
+<script>
+  // Create zones
+  const vacuumZone = document.createElement("div");
+  vacuumZone.className = "vacuum-zone";
+  vacuumZone.innerText = "VACUUM";
+
+  const compressZone = document.createElement("div");
+  compressZone.className = "compress-zone";
+  compressZone.innerText = "COMPRESS";
+
+  document.getElementById("vacuum-layer").appendChild(vacuumZone);
+  document.getElementById("compress-layer").appendChild(compressZone);
+
+  // Toggles
+  document.getElementById("toggle-vacuum").onchange = e => {
+    vacuumZone.style.display = e.target.checked ? "flex" : "none";
+  };
+
+  document.getElementById("toggle-compress").onchange = e => {
+    compressZone.style.display = e.target.checked ? "flex" : "none";
+  };
+
+  // Sliders
   document.getElementById("vacuumTop").oninput = e => {
     vacuumZone.style.top = e.target.value + "%";
   };
@@ -80,163 +219,5 @@
   };
 </script>
 
-    /* ===== COMPRESS ZONE ===== */
-
-    .compress-zone {
-      position: absolute;
-      left: 15%;
-      width: 70%;
-      height: 56px;
-      top: 55%;
-      background: rgba(255, 180, 0, 0.18);
-      border: 2px solid rgba(255, 180, 0, 0.7);
-      border-radius: 14px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 16px;
-      font-weight: bold;
-      letter-spacing: 2px;
-      color: rgba(255, 200, 80, 0.65);
-    }
-
-    /* ===== METRICS PANEL ===== */
-
-    #metrics {
-      padding: 12px;
-      border-top: 1px solid #1e2329;
-      background: #0b0e11;
-      font-size: 14px;
-    }
-
-    @media (min-width: 768px) {
-      #app {
-        flex-direction: row;
-      }
-      #chart-wrapper {
-        flex: 3;
-      }
-      #metrics {
-        flex: 1;
-        border-top: none;
-        border-left: 1px solid #1e2329;
-      }<hr style="border-color:#1e2329">#metrics input[type=range] {
-  width: 100%;
-  margin-bottom: 12px;
-}
-
-<strong>Kalibrācija</strong><br><br>
-
-<label>Vacuum pozīcija</label>
-<input type="range" id="vacuumTop" min="0" max="80" value="35">
-
-<label>Vacuum augstums</label>
-<input type="range" id="vacuumHeight" min="5" max="40" value="20">
-
-<br><br>
-
-<label>Compress pozīcija</label>
-<input type="range" id="compressTop" min="0" max="80" value="55">
-
-<label>Compress biezums</label>
-<input type="range" id="compressHeight" min="4" max="20" value="10">
-    }
-  </style>
-</head>
-
-<body>
-  <div id="app">
-
-    <div id="chart-wrapper">
-      <div id="chart"></div>
-
-      <!-- OVERLAYS -->
-      <div id="vacuum-layer"></div>
-      <div id="compress-layer"></div>
-    </div>
-
-    <div id="metrics"><div id="controls" style="margin-bottom:12px;">
-  <strong>Kontrole</strong><br><br>
-
-  <label>
-    <input type="checkbox" id="toggle-vacuum" checked>
-    Vacuum
-  </label><br>
-
-  <label>
-    <input type="checkbox" id="toggle-compress" checked>
-    Compress
-  </label><br>
-
-  <label style="opacity:0.4;">
-    <input type="checkbox" disabled>
-    Aggression (drīzumā)
-  </label>
-
-  <hr style="border:0;border-top:1px solid #1e2329;margin:12px 0;">
-    </div>
-      <strong>Metodikas</strong><br><br>
-      Savienojums: <b>LIVE</b><br>
-      Instruments: <b>BTCUSDT</b><br>
-      Timeframe: <b>15m</b><br><br>
-      (Indikatori tiks pievienoti pakāpeniski)
-    </div>
-
-  </div>
-
-  <!-- TradingView -->
-  <script src="https://s3.tradingview.com/tv.js"></script>
-
-  <script>
-    new TradingView.widget({
-      container_id: "chart",
-      autosize: true,
-      symbol: "BINANCE:BTCUSDT",
-      interval: "15",
-      timezone: "Etc/UTC",
-      theme: "dark",
-      style: "1",
-      locale: "en",
-      hide_top_toolbar: false,
-      hide_legend: true,
-      allow_symbol_change: false,
-      save_image: false
-    });
-
-    /* ===== STATIC TEST OVERLAYS ===== */
-
-    const vacuum = document.createElement("div");
-    vacuum.className = "vacuum-zone";
-    vacuum.innerText = "VACUUM";
-    document.getElementById("vacuum-layer").appendChild(vacuum);
-
-    const compress = document.createElement("div");
-    compress.className = "compress-zone";
-    compress.innerText = "COMPRESS";
-    document.getElementById("compress-layer").appendChild(compress);
-
-    /* ===== INDICATOR SYSTEM SCAFFOLD ===== */
-
-    const indicators = {
-      compress: { enabled: true },
-      vacuum: { enabled: true, zones: [] },
-      aggression: { enabled: false, buy: [], sell: [] },
-      breakout: { enabled: true, strength: 0, probability: 0 }
-    };
-
-    console.log("System initialized", indicators);
-  </script><script>
-  // === Toggle logic ===
-  const vacuumLayer = document.getElementById("vacuum-layer");
-  const compressLayer = document.getElementById("compress-layer");
-
-  document.getElementById("toggle-vacuum").addEventListener("change", e => {
-    vacuumLayer.style.display = e.target.checked ? "block" : "none";
-  });
-
-  document.getElementById("toggle-compress").addEventListener("change", e => {
-    compressLayer.style.display = e.target.checked ? "block" : "none";
-  });
-  </script>
 </body>
 </html>
